@@ -38,6 +38,10 @@ BUGFIXES:
   ZOOKEEPER-2558: Potential memory leak in recordio.c
   (Michael Han via phunt)
 
+  ZOOKEEPER-1927: zkServer.sh fails to read dataDir (and others)
+  from zoo.cfg on Solaris 10 (grep issue, manifests as FAILED TO WRITE PID)
+  (Chris Nauroth via rgs)
+
 IMPROVEMENTS:
 
   ZOOKEEPER-2505: Use shared library instead of static library in C
